--- a/carpeta/index.html
+++ b/carpeta/index.html
@@ -32,6 +32,12 @@
             </div>
             <div>
                     <div style="width: 900px;margin-left: auto;margin-right: auto">
+                    <div>
+                            <video controls="" src=".\projectox.mp4" style="width:150px"></video>
+                    </div>
+                </div>
+            <div>
+                    <div style="width: 900px;margin-left: auto;margin-right: auto">
                         <h3 style="font-size: 36px;font-weight: 700 ">Experiencia Laboral</h3>
                         <div>
                             <dl>
